# Ecommerce-Sales-and-Review-Intelligence-System-with-Explainable-AI-SHAP-

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml  features.yaml  model_config.yaml
docker/: Dockerfile  docker-compose.yaml
notebooks/: .gitkeep
scripts/: train.py
src/: __init__.py
src/data/: __init__.py  ingestion.py  preprocessing.py  validation.py
src/explainability/: __init__.py  explanations.py  shap_explainer.py  visualization.py
src/features/: __init__.py  feature_definitions.py  feature_engineering.py  feature_store.py
src/models/: __init__.py  evaluator.py  registry.py  review_risk_predictor.py  sales_predictor.py  trainer.py
src/monitoring/: __init__.py  data_drift.py  metrics.py  model_drift.py
src/serving/: __init__.py  api.py  inference.py  schemas.py
src/utils/: __init__.py  config.py  logging.py
tests/: __init__.py
tests/test_data/: __init__.py
tests/test_features/: __init__.py
tests/test_serving/: __init__.py
